--- a/package.json
+++ b/package.json
@@ -28,5 +28,18 @@
   "bugs": {
     "url": "https://github.com/Yegorich555/webpack-mock-server/issues"
   },
-  "homepage": "https://github.com/Yegorich555/webpack-mock-server#readme"
+  "homepage": "https://github.com/Yegorich555/webpack-mock-server#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.4"
+  }
 }
