VSCode. Add autofix for markdownlint. Update scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.codeActionsOnSave": {
     "source.fixAll.tslint": true,
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": true,
+    "source.fixAll.markdownlint": true
   },
   "eslint.validate": ["javascript", "typescript"],
   "editor.formatOnSave": false,
