--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "lint",
-    "lint": "npm run lint-code",
-    "lint-fix": "npm run lint-code -- --fix",
-    "lint-code": "./node_modules/.bin/eslint ./**/*.{js,jsx,ts,tsx,json}"
+    "lint": "npm run lint-code && npm run lint-md",
+    "lint-fix": "npm run lint-code -- --fix && npm run lint-md -- --fix",
+    "lint-code": "./node_modules/.bin/eslint ./**/*.{js,jsx,ts,tsx,json}",
+    "lint-md": "./node_modules/.bin/markdownlint **/*.md --ignore node_modules"
   },
   "repository": {
     "type": "git",
