--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
     "outDir": "./lib",
     "target": "es6",
     "declaration": true,
@@ -9,8 +8,8 @@
     "module": "commonJs",
     "allowJs": true
   },
-  "files": [
-    "./src/index.ts"
+  "include": [
+    "src/**/*",
   ],
   "exclude": ["node_modules", "lib"]
 }
