--- a/package.json
+++ b/package.json
@@ -53,7 +53,5 @@
     "typescript": "^3.7.4",
     "webpack-dev-server": "^3.10.1"
   },
-  "dependencies": {
-    "ts-node-dev": "^1.0.0-pre.44"
-  }
+  "dependencies": {}
 }
