--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "strict": true,
     "module": "commonJs",
-    "allowJs": true
+    "allowJs": true,
+    "checkJs": true
   },
   "include": [
     "src/**/*",
