Refactoring. Rewrite whole project on typescript

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint-fix": "npm run lint-code -- --fix && npm run lint-md -- --fix",
     "lint-code": "./node_modules/.bin/eslint ./**/*.{js,jsx,ts,tsx,json}",
     "lint-md": "./node_modules/.bin/markdownlint **/*.md --ignore node_modules",
-    "serve": "node ./test/start",
-    "build": "tsc --watch"
+    "serve": "npm run build && node ./test/start",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -55,6 +55,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "typescript": ">=2.7"
+    "typescript": ">=2.7",
+    "express": "*"
   }
 }
