npm. Add files section in package.json

--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
   "peerDependencies": {
     "typescript": ">=2.7",
     "express": "*"
-  }
+  },
+  "files": [
+    "src/mockServer.ts",
+    "lib/*"
+  ]
 }
