VSCode. Update todo-rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true
-  }
+  },
+  "todo-tree.filtering.excludeGlobs": ["**/lib/*"]
 }
