--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "outDir": "./lib",
     "target": "es6",
     "declaration": true,
@@ -10,7 +11,7 @@
     "checkJs": true
   },
   "files": [
-    "src/index.ts"
+    "index.ts"
   ],
   "exclude": ["node_modules", "lib"]
 }
