--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "homepage": "https://github.com/Yegorich555/webpack-mock-server#readme",
   "devDependencies": {
-    "@types/express": "^4.17.2",
     "@types/node": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
@@ -48,15 +47,12 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "express": "^4.17.1",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.4",
-    "webpack-dev-server": "^3.10.1"
+    "typescript": "^3.7.4"
   },
   "dependencies": {},
   "peerDependencies": {
-    "typescript": ">=2.7",
-    "express": "*"
+    "typescript": ">=2.7"
   },
   "files": [
     "lib/*"
