--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
   "files": [
     "lib/*",
     "public/*"
-  ]
+  ],
+  "publishConfig": {
+    "save-prefix": "^",
+    "save-dev": true
+  }
 }
