Server. Add uploading images with storing to routes

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   },
   "peerDependencies": {
     "typescript": ">=2.7",
-    "express": "*"
+    "express": "*",
+    "@types/multer": "*"
   },
   "files": [
     "lib/*",
