Packages. Update. Fix lint-issues

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "test": "npm run lint",
     "lint": "npm run lint-code && npm run lint-md",
-    "lint-fix": "npm run lint-code -- --fix && npm run lint-md -- --fix",
-    "lint-code": "./node_modules/.bin/eslint ./**/*.{js,jsx,ts,tsx,json}",
-    "lint-md": "./node_modules/.bin/markdownlint **/*.md --ignore node_modules",
+    "lint-code": "./node_modules/.bin/eslint ./**/*.{js,jsx,ts,tsx,json} --fix",
+    "lint-md": "./node_modules/.bin/markdownlint **/*.md --ignore node_modules --fix",
     "serve-node": "npm run build && node ./test/start",
     "serve": "npm run build && npm run run-webpack",
     "run-webpack": "./node_modules/.bin/webpack serve --hot --config test/webpack.config.js",
@@ -46,26 +45,28 @@
   "homepage": "https://github.com/Yegorich555/webpack-mock-server#readme",
   "devDependencies": {
     "@types/multer": "^1.4.7",
-    "@types/node": "^13.13.52",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.15.0",
+    "@types/node": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-json": "^2.1.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "express": "^4.17.1",
-    "prettier": "^1.19.1",
-    "typescript": "^3.9.10",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "eslint-import-resolver-typescript": "^3.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.1",
+    "markdownlint-cli": "^0.31.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "multer": "^1.4.2"
+    "multer": "^1.4.5-lts.1"
   },
   "peerDependencies": {
     "typescript": ">=2.7",
