--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": ["/*"],
+      "@/*": ["/*"]
     },
     "outDir": "./lib",
     "target": "es6",
@@ -11,7 +11,9 @@
     "strict": true,
     "module": "commonJs",
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "removeComments": false,
+    "newLine": "lf"
   },
   "include": ["src/*"],
   "exclude": ["node_modules", "lib"]
