--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.21.0",
+    "html-webpack-plugin": "^5.6.0",
     "markdownlint-cli": "^0.33.0",
     "prettier": "^2.8.8",
     "shx": "^0.3.4",
