--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-mock-server",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "Mocks api requests for webpack-dev-server with hot-replacement",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,6 +24,7 @@
     "webpack",
     "mock",
     "mocker",
+    "server",
     "api",
     "webpack-dev-server",
     "typescript",
